--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
     "html-webpack-plugin": "^3.2.0",
     "javascript-obfuscator": "^0.18.3",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.9.0",
+    "sass": "^1.56.1",
     "optimist": "^0.6.1",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "ora": "^2.1.0",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^10.2.0",
     "shelljs": "^0.8.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
